@@ -58,6 +58,9 @@ struct legacy_command
   const char *longdesc;
 };
 
+/* Help texts are kept here mostly for reference. They are never shown. So
+   no need to gettextize.
+ */
 static struct legacy_command legacy_commands[] =
   {
     {"blocklist", "blocklist '%s'\n", NULL, 0, 1, {TYPE_FILE}, 0, "FILE",
