@@ -1,5 +1,10 @@
 2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-macho2img.c: Add comment concerning gettext.
+	* grub-core/lib/legacy_parse.c: Likewise.
+
+2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/kern/misc.c (grub_vprintf): Add missing va_end.
 	(grub_xvasprintf): Likewise.
 
